--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
     <!-- <div class="container"> -->
     <header class="header">
         <div class="container">
-            <nav class="nav justify-content-between sticky border">
+            <nav class="nav justify-content-between align-items-center border menu">
                 <a href="#" class="logo">Mo.</a>
-                <ul class="nav ">
-                    <li class="nav-item"><a href="#">Accueil</a></li>
-                    <li class="nav-item"><a href="#">A propos</a></li>
-                    <li class="nav-item"><a href="#">Portfolio</a></li>
-                    <li class="nav-item"><a href="#">Contact</a></li>
+                <ul class="nav justify-content-center text-dark">
+                    <li class="nav-item"><a href="#" class="nav-link active">Accueil</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">A propos</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">Portfolio</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
                 </ul>
             </nav>
             <div class="top">
-                <h1>Salut, je suis Mohamed</h1>
-                <p>Développeur ReactJS & NodeJS </p>
+                <h1 class="display-4">Salut, je suis Mohamed</h1>
+                <p class="lead">Développeur ReactJS & NodeJS </p>
             </div>
         </div>
 
