--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- <div class="container"> -->
     <header class="header">
         <div class="container">
-            <nav class="nav justify-content-between align-items-center border menu">
+            <nav class="nav justify-content-between align-items-center menu sticky-top">
                 <a href="#" class="logo">Mo.</a>
                 <ul class="nav justify-content-center text-dark">
                     <li class="nav-item"><a href="#" class="nav-link active">Accueil</a></li>
@@ -34,10 +34,10 @@
         </div>
 
     </header>
-    <section class="presentation pt-3 pb-3">
+    <section class="presentation pt-5 pb-5">
         <div class="container">
                 <h2>A Propos</h2>
-            <div class="d-flex ">
+            <div class="d-flex proposCont">
                 
                 <div class="apropos">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus doloremque blanditiis
@@ -53,7 +53,7 @@
                         fugiat sed voluptate nihil nostrum! Laborum debitis expedita repudiandae! In, maiores amet
                         ratione animi repellendus porro magni saepe dolor quae consequatur molestiae?</p>
                 </div>
-                <div class="progress-container d-flex flex-column justify-content-between flex-1 ">
+                <div class="progress-container d-flex flex-column justify-content-between">
                     <div class="progress" style="height: 25px">
                         <div class="progress-bar w-75 bg-info progress-bar-striped progress-bar-animated"
                             role="progressbar " aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">HTML</div>
@@ -90,10 +90,10 @@
         </div>
 
     </section>
-    <section class="portfoli pt-3 pb-3">
+    <section class="portfolio pt-5 pb-5">
         <div class="container">
             <h2>Portfolio</h2>
-            <div class="blockImg">
+            <div class="blockImg d-flex justify-content-center">
                 <img src="https://picsum.photos/id/250/250/450" alt="" class="image">
                 <img src="https://picsum.photos/id/350/250/450" alt="" class="image">
                 <img src="https://picsum.photos/id/450/250/450" alt="" class="image">
@@ -101,11 +101,11 @@
         </div>
 
     </section>
-    <section class="contact pt-3 pb-3">
+    <section class="contact pt-5 pb-5">
         <div class="container">
             <h2>Contact</h2>
-            <div class="blockContact">
-                <div class="detail">
+            <div class="blockContact d-flex ">
+                <div class="detail border text-center">
                     <h3>
                         Mes Coordonnées
                     </h3>
@@ -114,14 +114,21 @@
                         <li><a href="#">github.com/mohamedkerkeb</a></li>
                     </ul>
                 </div>
-                <div class="formulaire">
-                    <form action="">
-                        <label for="">Nom Prénom:</label>
-                        <input type="text" name="" id="">
-                        <label for="">Email: </label>
-                        <input type="text" name="" id="">
-                        <label for="">Message:</label>
-                        <textarea name="" id="" cols="30" rows="10"></textarea>
+                <div class="formulaire border ">
+                    <form action="" class="d-flex flex-column">
+                        <div class="label">
+                                <label for="">Nom Prénom:</label>
+                                <input type="text" name="" id="">
+                        </div>
+                        <div class="label">
+                                <label for="">Email: </label>
+                                <input type="text" name="" id="">
+                        </div>
+                        <div class="label">
+                                <label for="">Message:</label>
+                                <textarea name="" id="" cols="30" rows="10"></textarea>
+                        </div>
+                        
                     </form>
                 </div>
             </div>
@@ -129,7 +136,7 @@
 
 
     </section>
-    <footer class="pt-3 pb-3">
+    <footer class="pt-5 pb-5 text-center">
         <div class="container">
             <p>Mo. Tous droits réservés. 2019</p>
         </div>
